--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^21.1.2",
     "@angular/platform-browser": "^21.1.2",
     "@angular/router": "^21.1.2",
+    "@xterm/xterm": "^6.0.0",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
   },
