chore: add material design icons pack

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^21.1.2",
     "@angular/platform-browser": "^21.1.2",
     "@angular/router": "^21.1.2",
+    "@mdi/js": "^7.4.47",
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/xterm": "^6.0.0",
     "rxjs": "~7.8.2",
